# HelloQt

./: .gitignore  CMakeLists.txt
